--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "a simple ai chatbot in the terminal",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "Lakshit Chiranjiv Sagar",
   "license": "MIT",
